@startuml

title __REPOSITORIES's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace repositories {
      class com.cleanup.todoc.repositories.ProjectDataRepository {
          + ProjectDataRepository()
          + getProjects()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace repositories {
      class com.cleanup.todoc.repositories.TaskDataRepository {
          + TaskDataRepository()
          + createTask()
          + deleteTask()
          + getTasks()
      }
    }
  }
  

  com.cleanup.todoc.repositories.ProjectDataRepository o-- com.cleanup.todoc.database.dao.ProjectDao : projectDao
  com.cleanup.todoc.repositories.TaskDataRepository o-- com.cleanup.todoc.database.dao.TaskDao : taskDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
